--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/style.css">
   <link rel="shortcut icon" href="/assets/vector.svg" type="image/svg+xml">
   <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 </head>
 
 <body>
