--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,6 +1,8 @@
 <footer class="site-footer">
   <svg xmlns="/assets/avataaars.svg" viewBox="0 0 114 26.6" class="logo" width="8rem"
     fill="var(--logo-color, #000)">
+    <path
+    d="/assets/avataaars.svg"/>
   </svg>
   <p>© {% year %} Company Name. All rights reserved.</p>
 </footer>
