change svg path in footer

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -2,7 +2,7 @@
   <svg xmlns="/assets/avataaars.svg" viewBox="0 0 114 26.6" class="logo" width="8rem"
     fill="var(--logo-color, #000)">
     <path
-    d="/assets/avataaars.svg"/>
+    d="/Users/19083/javascript/project-12/blog-FrederickLamptey/src/assets/avataaars.svg"/>
   </svg>
   <p>© {% year %} Company Name. All rights reserved.</p>
 </footer>
