change logo path in footer

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,8 +1,8 @@
 <footer class="site-footer">
-  <svg xmlns="/assets/avataaars.svg" viewBox="0 0 114 26.6" class="logo" width="8rem"
+  <svg xmlns="https://www.svgrepo.com/svg/429185/astronomy-planet-rings" viewBox="0 0 114 26.6" class="logo" width="8rem"
     fill="var(--logo-color, #000)">
     <path
-    d="/Users/19083/javascript/project-12/blog-FrederickLamptey/src/assets/avataaars.svg"/>
+    d="https://www.svgrepo.com/svg/429185/astronomy-planet-rings"/>
   </svg>
   <p>© {% year %} Company Name. All rights reserved.</p>
 </footer>
