--- a/src/index.njk
+++ b/src/index.njk
@@ -7,16 +7,15 @@ layout: 'base.njk'
   <div class="container flow">
     <div class="hero__content flow">
       <h1 class="section-title">Welcome to my blog!</h1>
-      <p>I use this space to document my adventures in front-end development, sharing how I've overcome issues I've
-        run into, useful resources, and more.</p>
-      <p>Below are some of my favourite articles, or you can go to the blog page to see my most recent posts.</p>
+      <p>On this blog, I talk about web development related topics, and other topics that you can relate to and somewhat inspire you.</p>
+      <p>Below are my written works so far, or you can go to the blog page to see my most recent posts.</p>
       <div class="flex-group">
         <a href="#featured-articles" class="btn btn--primary">Featured articles</a>
         <a href="./blog" class="btn btn--neutral">Most recent articles</a>
       </div>
     </div>
     <div>
-      <img src="/assets/blog/welcome-809-510x510.jpg" alt="" class="hero__image">
+      <img src="/assets/blog/myblog.jpg" alt="" class="hero__image">
     </div>
   </div>
 </section>
@@ -24,7 +23,7 @@ layout: 'base.njk'
 <section id="featured-articles" class="featured-articles">
   <div class="container flow">
     <h2 class="section-title text-center ">Featured articles</h2>
-    <p class="text-center">Here is a sample of articles which I feel give you a good idea of what this site is all
+    <p class="text-center">Here is a sample of articles which I feel will give you a good idea of what this site is all
       about.</p>
     <ul role="list" class="articles__list flow">
       {%- for post in collections.featured | reverse -%}
