--- a/src/style.css
+++ b/src/style.css
@@ -397,7 +397,7 @@ header,
 }
 .btn--primary:hover,
 .btn--primary:focus {
-  background: var(--clr-primary-500);
+  background: rgb(25,75,229);
   border-color: var(--clr-primary-500);
 }
 
