--- a/src/style.css
+++ b/src/style.css
@@ -178,7 +178,8 @@ section,
 
 .article-title,
 .section-title {
-  color: var(--clr-primary-500);
+  /* color: var(--clr-primary-500); */
+  color: rgb(0,0,0);
 }
 
 .article-title {
