--- a/src/style.css
+++ b/src/style.css
@@ -244,7 +244,7 @@ header,
 
 .site-footer {
   --logo-color: currentColor;
-  padding: 2em 0;
+  padding: 2em 1em;
   color: var(--clr-neutral-100);
   /*background-color: var(--clr-primary-500);*/
   background-color: rgb(7,94,121);
